<?xml version="1.0" encoding="utf-8"?>
<!--Christian Adebambo - S2111002-->
<resources>
    <string name="app_name">Adebambo_Christian_S2111002</string>
    <string name="back_button">Back</string>
    <string name="home">Home</string>
    <string name="current_weather">Current Weather</string>
    <string name="locations">Locations</string>
    <string name="settings">Settings</string>
    <string name="weather_icon_description">WeatherTell Icon</string>
    <string name="weather_condition">Weather Condition</string>
    <string name="temperature">Temperature</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="date">Date</string>
    <string name="today">Today</string>
    <string name="pressure">Pressure</string>
    <string name="uvrisk">UV Risk</string>
    <string name="pollution">Pollution</string>
    <string name="sun">Sun</string>

</resources>