<?xml version="1.0" encoding="utf-8"?>
<!--Christian Adebambo - S2111002-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="53dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/back_button"
        android:padding="16dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/studentIdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Christian Adebambo - S2111002"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headerForecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Detailed Forecast"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/studentIdTextView" />

    <TextView
        android:id="@+id/locationNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerForecast" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationNameTextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/curved_background"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_margin="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDate">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/iconWeatherCondition"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_weather_condition"
                android:contentDescription="@string/weather_condition"
                app:tint="@color/background_color"/>

            <TextView
                android:id="@+id/textViewCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/card_text"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="30dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/iconTemperature"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_temperature"
                android:contentDescription="@string/temperature"
                app:tint="@color/background_color"/>

            <TextView
                android:id="@+id/textViewTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/card_text"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="30dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/iconWind"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_wind"
                android:contentDescription="@string/wind"
                app:tint="@color/background_color"/>

            <TextView
                android:id="@+id/textViewWind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/card_text"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="30dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/iconPressure"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_pressure"
                android:contentDescription="@string/pressure"
                app:tint="@color/background_color"/>

            <TextView
                android:id="@+id/textViewPressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/card_text"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="30dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/iconHumidity"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_humidity"
                android:contentDescription="@string/humidity"
                app:tint="@color/background_color"/>

            <TextView
                android:id="@+id/textViewHumidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/card_text"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="30dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/iconUvRisk"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_uvrisk"
                android:contentDescription="@string/uvrisk"
                app:tint="@color/background_color"/>

            <TextView
                android:id="@+id/textViewUVRisk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/card_text"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="30dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/iconPollution"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_pollution"
                android:contentDescription="@string/pollution"
                app:tint="@color/background_color"/>

            <TextView
                android:id="@+id/textViewPollution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/card_text"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="30dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/iconSun"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_sun"
                android:contentDescription="@string/sun"
                app:tint="@color/background_color"/>

            <TextView
                android:id="@+id/textViewSunTimes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/card_text"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="30dp"/>

        </RelativeLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>