<?xml version="1.0" encoding="utf-8"?>
<!--Christian Adebambo - S2111002-->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@color/card_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/iconDate"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_date"
                android:contentDescription="@string/date"
                app:tint="@color/background_color"/>

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/card_text"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="30dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/iconWeatherCondition"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_weather_condition"
                android:contentDescription="@string/weather_condition"
                app:tint="@color/background_color"/>

            <TextView
                android:id="@+id/textViewCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/card_text"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="30dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/iconTemperature"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_temperature"
                android:contentDescription="@string/temperature"
                app:tint="@color/background_color"/>

            <TextView
                android:id="@+id/textViewTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/card_text"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="30dp"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>